--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,8 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
-    	android:debuggable="true">
+    	>
+        <!--android:debuggable="true"-->
 		<activity
             android:name="PhoneGapExample"
             android:label="@string/app_name"
